deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: naudit
  labels:
    app.kubernetes.io/name: naudit
