deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: naudit
  namespace: naudit
  labels:
    app.kubernetes.io/name: naudit
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: naudit
  ports:
    - name: http
      port: 80
      targetPort: http
